log
Thu Mar 20 17:49:42 HSP 2025: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu Mar 20 17:58:09 HSP 2025: 
 exercises.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:46:10: error: redefinition of 'L'
    List* L = (List*)malloc(sizeof(List*));
          ^
exercises.c:45:10: note: previous definition of 'L' was here
    List* L = create_list();
          ^
exercises.c: In function 'sumaLista':
exercises.c:61:14: error: implicit declaration of function 'fisrt' [-Werror=implicit-function-declaration]
    int* dato=fisrt(L);
              ^~~~~
exercises.c:61:14: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c: In function 'copia_pila':
exercises.c:107:11: error: 'return' with a value, in function returning void [-Werror]
    return P2;
           ^~
exercises.c:90:6: note: declared here
 void copia_pila(Stack* P1, Stack* P2) {
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b7fc3c0
Thu, Mar 20, 2025  6:02:09 PM: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:14: error: implicit declaration of function 'fisrt' [-Werror=implicit-function-declaration]
    int* dato=fisrt(L);
              ^~~~~
exercises.c:62:14: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
exercises.c: In function 'copia_pila':
exercises.c:108:11: error: 'return' with a value, in function returning void [-Werror]
    return P2;
           ^~
exercises.c:91:6: note: declared here
 void copia_pila(Stack* P1, Stack* P2) {
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
88c8e46
Fri, Mar 21, 2025  6:10:44 PM: 
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:62:14: error: implicit declaration of function 'fisrt'; did you mean 'first'? [-Wimplicit-function-declaration]
   62 |    int* dato=fisrt(L);
      |              ^~~~~
      |              first
exercises.c:62:14: error: initialization of 'int *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
exercises.c: In function 'eliminaElementos':
exercises.c:83:14: error: comparison between pointer and integer [-Werror]
   83 |       if(dato==elem){
      |              ^~
exercises.c: In function 'copia_pila':
exercises.c:115:11: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
  115 |    return P2;
      |           ^~
exercises.c:98:6: note: declared here
   98 | void copia_pila(Stack* P1, Stack* P2) {
      |      ^~~~~~~~~~
exercises.c: In function 'parentesisBalanceados':
exercises.c:126:11: error: unused variable 'pila' [-Werror=unused-variable]
  126 |    Stack* pila=create_stack();
      |           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fa80dc3
Fri, Mar 21, 2025  6:13:23 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'eliminaElementos':
exercises.c:83:14: error: comparison between pointer and integer [-Werror]
   83 |       if(dato==elem){
      |              ^~
exercises.c: In function 'copia_pila':
exercises.c:115:11: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
  115 |    return P2;
      |           ^~
exercises.c:98:6: note: declared here
   98 | void copia_pila(Stack* P1, Stack* P2) {
      |      ^~~~~~~~~~
exercises.c: In function 'parentesisBalanceados':
exercises.c:126:11: error: unused variable 'pila' [-Werror=unused-variable]
  126 |    Stack* pila=create_stack();
      |           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
69ef74e
